[package]
name = "zorro_wasm"
version = "0.1.0"
authors = ["chrisftw <chris@chrisreister.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
zorro = {path = "../zorro"}
console_error_panic_hook = "0.1.6"
