[package]
name = "zorro_wasm"
version = "0.0.1"
authors = ["chrisftw", "roxannedunn"]
description = "Use zorro library on the web."
homepage = "https://github.com/chrisftw/zorro_wasm"
documentation = "https://github.com/chrisftw/zorro_wasm"
repository = "https://github.com/chrisftw/zorro_wasm"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
zorro = "0.0.1"
console_error_panic_hook = "0.1.6"
